<resources>
    <string name="app_name">Tiketku</string>
    <string name="Sign_app">SIGN IN</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="create_akun_text">Create New Account</string>
    <string name="email_label">Email</string>
    <string name="continue_label">Continue</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Your Passion</string>
    <string name="selamat_label">Congratulations</string>
    <string name="explore_label">Explore Now</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="price_label">Price</string>
    <string name="total_price_label">Total Price</string>
    <string name="pay_now_label">Pay Now</string>
    <string name="home_label">Dashboard</string>
    <string name="view_ticket_label">View Ticket</string>
    <string name="profile_label">Profile</string>
    <string name="my_ticket_label">My Ticket</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="signout_label">Sign Out</string>
    <string name="refund_label">Refund Ticket</string>
    <string name="save_profile_label">Save Profile</string>
</resources>
